# sw_3d_render

./: CMakeLists.txt  LICENSE  README.md  blender_to_cpp_exporter.py  geometry.hpp  geometry_cube.hpp  geometry_square.hpp  main.cpp  render.hpp  render_math.hpp
model/: cottage_blender.blend
